--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
       <div class="col-6">
           <h1>uwuuuuuu </h1>
 
-          <img src="shy.jpeg" alt="ako" class="img-thumbnail" style="width:600px; height:600px;"/>
+          <img src="IMG_20210806_090904.jpg" alt="ako" class="img-thumbnail" style="width:600px; height:600px;"/>
           <button type="button" class="btn btn-primary" type="button" id="btnLike1"> Like </button>
         <output id="countLike1"> </output>
       </div>
