--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Shairyle Ramos</title>
+  <title>Charlie Menor</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
@@ -12,7 +12,7 @@
   <div class="container"> 
     <div class="row">
       <div class="col-6">
-          <h1>uwuuuuuu </h1>
+          <h1>uwuuuuuu</h1>
 
           <img src="IMG_20210806_090904.jpg" alt="ako" class="img-thumbnail" style="width:600px; height:600px;"/>
           <button type="button" class="btn btn-primary" type="button" id="btnLike1"> Like </button>
