--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <div class="col-6">
       <img src="IMG_20210806_090904.jpg" class="img-thumbnail" style="with:400px;height:500px;"/><br>
         <button class="btn btn-primary" type="button" id="btnLike1"> Like </button>
-        <output id="countLike1"> </output> 
+        <output id="countLike1">0</output> 
      </div>
     
       <div class="col-6">
       <img src="IMG_20220610_080851.jpg" class="img-thumbnail" style="with:400px;height:500px;"/><br>
         <button class="btn btn-primary" type="button" id="btnLike2"> Like </button>
-          <output id="countLike2"> </output>
+          <output id="countLike2">0</output>
       </div>
   </div>
 </div>
