--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
         <button class="btn btn-primary" type="button" id="btnLike2"> Like </button>
           <output id="countLike2">0</output>
       </div>
+    <div class="col-4">
+      comments <br>
+      <input type="text" class="form-control" id="comment"/>
+      <button class="btn btn-succes" id="submit">submit</button>
+      <br>
+      <textarea class="form-control" id="commentbox" rows="30"> </textarea>
+      
   </div>
 </div>
 <script src="index.js"></script>  
