--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <output id="countLike2">0</output>
       </div>
     <div class="col-4">
-      comments <br>
+      Comments <br>
       <input type="text" class="form-control" id="comment"/>
       <button class="btn btn-succes" id="submit">submit</button>
       <br>
