--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="col-4">
       Comments <br>
       <input type="text" class="form-control" id="comment"/>
-      <button class="btn btn-succes" id="submit">submit</button>
+      <button class="btn btn-success" id="submit">submit</button>
       <br>
       <textarea class="form-control" id="commentbox" rows="30"> </textarea>
       
