--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
     <div class="col-4">
       <img src="IMG_20210806_090904.jpg" class="img-thumbnail" style="width:400px;height:500px;"/><br>
       <button class="btn btn-primary" type="button" id="btnLike1">Like</button>
+      <output id="countLike1">0</output>
       <button class="btn btn-danger" type="button" id="btnDislike1">Dislike</button>
-      <output id="countLike1">0</output> 
+      <output id="countDislike1">0</output> 
     </div>
     
     <div class="col-4">
       <img src="IMG_20220610_080851.jpg" class="img-thumbnail" style="width:400px;height:500px;"/><br>
       <button class="btn btn-primary" type="button" id="btnLike2">Like</button>
-      <button class="btn btn-danger" type="button" id="btnDislike2">Dislike</button>
       <output id="countLike2">0</output>
+      <button class="btn btn-danger" type="button" id="btnDislike2">Dislike</button>
+      <output id="countDislike2">0</output>
     </div>
     
     <div class="col-4">
