--- a/index.html
+++ b/index.html
@@ -1,38 +1,66 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>DIKO NA MANTANDAAN YOUR HONOR</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bflix - Watch Movies Online</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
-<body> 
-<div class="container">
-  <div class="row">
-    <div class="col-4">
-      <img src="IMG_20210806_090904.jpg" class="img-thumbnail" style="width:400px;height:500px;"/><br>
-      <button class="btn btn-primary" type="button" id="btnLike1">Like</button>
-      <output id="countLike1">0</output>
-      <button class="btn btn-danger" type="button" id="btnDislike1">Dislike</button>
-      <output id="countDislike1">0</output> 
-    </div>
-    
-    <div class="col-4">
-      <img src="IMG_20220610_080851.jpg" class="img-thumbnail" style="width:400px;height:500px;"/><br>
-      <button class="btn btn-primary" type="button" id="btnLike2">Like</button>
-      <output id="countLike2">0</output>
-      <button class="btn btn-danger" type="button" id="btnDislike2">Dislike</button>
-      <output id="countDislike2">0</output>
-    </div>
-    
-    <div class="col-4">
-      Comments <br>
-      <input type="text" class="form-control" id="comment"/>
-      <button class="btn btn-success" id="submit">Submit</button>
-      <br>
-      <textarea class="form-control" id="commentbox" rows="30"></textarea>
-    </div>
-  </div>
-</div>
-<script src="index.js"></script>  
+<body>
+
+    <header class="header">
+        <div class="header-left">
+            <i class="fa-solid fa-bars menu-icon"></i>
+            <a href="#" class="logo">bflix</a>
+        </div>
+        <div class="search-container">
+            <i class="fa-solid fa-search search-icon"></i>
+            <input type="text" placeholder="Search...">
+        </div>
+    </header>
+
+    <main>
+        <section class="hero">
+            <div class="hero-content">
+                <h1 class="hero-title">Eenie Meanie</h1>
+                <div class="hero-meta">
+                    <span class="rating"><i class="fa-solid fa-star"></i> 8.7</span>
+                    <span class="runtime">106 min</span>
+                    <span class="genre">Action, Comedy</span>
+                </div>
+                <p class="hero-description">
+                    A former teenage getaway driver gets pulled back into her criminal past when a heist goes wrong, offering her a chance to save the life of the person she loves.
+                </p>
+                <div class="hero-buttons">
+                    <button class="btn btn-primary"><i class="fa-solid fa-play"></i> Watch Now</button>
+                    <button class="btn btn-secondary"><i class="fa-solid fa-heart"></i> Favorite</button>
+                </div>
+            </div>
+             <div class="hero-carousel-dots">
+                <span class="dot active"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+            </div>
+        </section>
+
+        <section class="movie-list">
+            <div class="list-header">
+                <h2>Latest Movies</h2>
+                <a href="#" class="view-all">View all <i class="fa-solid fa-chevron-right"></i></a>
+            </div>
+            <div class="movie-grid" id="movie-grid">
+                </div>
+        </section>
+
+    </main>
+
+    <script src="script.js"></script>
+
 </body>
 </html>
