--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
         <div class="header-left">
             <i class="fa-solid fa-bars menu-icon"></i>
             <a href="#" class="logo">bflix</a>
+            <nav class="main-nav">
+                <ul>
+                    <li><a href="#" id="movies-btn" class="active">Movies</a></li>
+                    <li><a href="#" id="tv-series-btn">TV Series</a></li>
+                </ul>
+            </nav>
         </div>
         <div class="search-container">
             <i class="fa-solid fa-search search-icon"></i>
@@ -51,10 +57,10 @@
 
         <section class="movie-list">
             <div class="list-header">
-                <h2>Latest Movies</h2>
+                <h2 id="list-title">Latest Movies</h2>
                 <a href="#" class="view-all">View all <i class="fa-solid fa-chevron-right"></i></a>
             </div>
-            <div class="movie-grid" id="movie-grid">
+            <div class="movie-grid" id="content-grid">
                 </div>
         </section>
 
