--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Movie & TV Series</h1>
+        <h1>CharFlix</h1>
         <input type="text" id="searchBar" placeholder="Search by title...">
     </header>
 
