--- a/index.html
+++ b/index.html
@@ -8,14 +8,24 @@
 </head>
 <body>
     <header>
-        <h1>CharFlix</h1>
+        <h1>Movie & TV Series</h1>
         <input type="text" id="searchBar" placeholder="Search by title...">
     </header>
 
     <main id="content">
-        <div class="grid" id="movieGrid">
-            <!-- Movie posters will be added here -->
-        </div>
+        <section id="movies">
+            <h2>Movies</h2>
+            <div class="grid" id="movieGrid">
+                <!-- Movie posters will be added here -->
+            </div>
+        </section>
+
+        <section id="tvSeries">
+            <h2>TV Series</h2>
+            <div class="grid" id="tvSeriesGrid">
+                <!-- TV series posters will be added here -->
+            </div>
+        </section>
     </main>
 
     <!-- Video Modal -->
